# StealthInjector

./: .gitmodules  CMakeLists.txt
src/: Common.h  Core.cpp  InjectionContext.h  SIDefs.h  SIErrors.h  SIException.cpp  SIException.h
src/ExecutionBackend/: ExecutionBackend.h  NTExecutionBackend.h  Strategies.h  WinAPIExecutionBackend.h
src/Handle/: HandleStrategy.h  HijackStrategy.h  OpenProcessStrategy.h
src/Injection/: Injection.cpp  Injection.h
src/Memory/: Memory.cpp  Memory.h
src/Module/: Module.cpp  Module.h
src/PE/: PortableExecutable.cpp  PortableExecutable.h  PortableExecutable2.cpp  PortableExecutable2.h  SharedResource.h
src/Process/: MemoryManager.cpp  MemoryManager.h  Process.cpp  Process.h  ProcessContext.h
src/Shellcode/: ShellcodeGenerator.cpp  ShellcodeGenerator.h
src/Thread/: RemoteThread.h  ThreadManager.cpp  ThreadManager.h
src/Util/: SIResult.h  WinUtil.h
